minor spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ input {
 	z-index: 10;
 	float: left;
 	text-align: center;
-	background:rgba(0,0,0,0.5);
+	/*background:rgba(0,0,0,0.5);*/
 }
 
 .menu-button {
